--- a/main.css
+++ b/main.css
@@ -1,1 +1,78 @@
 
+  /* PAGE STYLES */
+
+    html {
+      height: 90%;
+    }
+    body {
+      position: relative;
+      min-height: 100%;
+    }
+    .column {
+      width: 50%;
+    }
+    .center {
+      margin: auto;
+      width: 50%;
+      padding: 10px;
+    }
+
+  /* HEADER STYLES */
+
+    h1 {
+      font-size: 2vw;
+    }
+    header {
+      text-align: center;
+      font-family: 'Rock Salt', cursive;
+    }
+
+    /* DAD IMAGE STYLES */
+
+    img {
+      width: 80%;
+      max-width: 100%;
+      height: auto;
+    }
+
+    /* BUTTON STYLES */
+
+    button {
+      background-color: white;
+      color: black;
+      border: 2px solid #f44336;
+      border-radius: 7px;
+      padding: 14px 40px;
+      font-size: 2vw;
+      font-family: 'Sawarabi Gothic', sans-serif;
+      transition-duration: 0.4s;
+      position: absolute;
+    }
+    button:hover {
+      background-color: red;
+      color: white;
+    }
+
+    /* DAD JOKE TEXT STYLES */
+
+    #dadJoke {
+      text-align: center;
+      font-family: 'Goudy Bookletter 1911', serif;
+      font-style: italic;
+      font-size: 2vw;
+    }
+
+    /* PUSHES FOOTER TO BOTTOM AND STYLES FOOTER */
+
+    .bottom-container {
+      height: 300px;
+    }
+    footer {
+      width: 100%;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      text-align: center;
+      font-size: 1vw;
+      font-family: 'Sawarabi Gothic', sans-serif;
+    }
