--- a/main.css
+++ b/main.css
@@ -8,9 +8,6 @@
       position: relative;
       min-height: 100%;
     }
-    .column {
-      width: 100%;
-    }
     .center {
       margin: auto;
       width: 50%;
@@ -23,17 +20,20 @@
       font-size: 2vw;
     }
     header {
-      text-align: left;
+      text-align: center;
       font-family: 'Rock Salt', cursive;
       height: 150px;
       padding-left: 25px;
+      margin: 40px;
     }
 
     /* DAD IMAGE STYLES */
 
     img {
-      max-width: 100%;
-      height: auto;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: white;
     }
 
     /* BUTTON STYLES */
